# Qwen3-TTS-12Hz-1.7B-ONNX

./: .gitignore  README.md
cpp/: CMakeLists.txt  README.md  VOICE_CLONE_RUNTIME_DESIGN.md
cpp/apps/: qwen_custom_voice.cc  qwen_custom_voice_chunk.cc  qwen_decode_debug.cc  qwen_ort_smoke.cc  qwen_prefill_debug.cc  qwen_tokenizer_decode_debug.cc  qwen_voice_clone.cc  qwen_voice_clone_chunk.cc  qwen_voice_clone_skeleton.cc  qwen_voice_design.cc  qwen_voice_design_chunk.cc
cpp/cmake/: OnnxRuntime.cmake
cpp/include/qwen_onnx/: audio_frontend.h  bpe_tokenizer.h  generation_config.h  model_config.h  ort_session.h  sampling.h  tensor.h  voice_clone_runtime.h  wav_writer.h
cpp/src/: audio_frontend.cc  bpe_tokenizer.cc  generation_config.cc  model_config.cc  ort_session.cc  sampling.cc  tensor.cc  voice_clone_runtime.cc  wav_writer.cc
examples/: pytorch_example.py
scripts/: export_onnx.py  pytorch_custom_voice_example.py  pytorch_voice_clone_example.py  pytorch_voice_design_example.py  verify_onnx.py
scripts/onnx_export/: consolidate_external_data.py  export.py  export_all_isolated_onnx.py  export_tokenizer12hz_onnx.py  onnx_dtype_utils.py  patch_decoder_fp32_islands.py  verify.py  verify_code_predictor_embed_onnx.py  verify_code_predictor_onnx.py  verify_embed_onnx.py  verify_speaker_encoder_onnx.py  verify_talker_decode_onnx.py  verify_talker_prefill_onnx.py
scripts/onnx_runtime/: audio_postprocess.py  compare_cpp_voice_clone.py  compare_custom_voice_greedy.py  compare_tokenizer12hz_audio.py  compare_voice_clone_greedy.py  compare_voice_design_greedy.py  custom_voice_example.py  custom_voice_ort.py  example.py  gradio_voice_clone.py  gradio_voice_clone_chunk.py  sampling.py  voice_clone_chunk_ort.py  voice_clone_example.py  voice_clone_ort.py  voice_design_example.py  voice_design_ort.py
